23 January 2023: George
	- Fix #833: [FR] Ability to set the Redis password.

23 January 2023: Wouter
	- Fix #835: [FR] Ability to use Redis unix sockets.

20 January 2023: Wouter
	- Merge #819: Added new static zone type block_a to suppress all A
	  queries for specific zones.

19 January 2023: Wouter
	- Set max-udp-size default to 1232. This is the same default value as
	  the default value for edns-buffer-size. It restricts client edns
	  buffer size choices, and makes unbound behave similar to other DNS
	  resolvers. The new choice, down from 4096 means it is harder to get
	  large responses from Unbound. Thanks to Xiang Li, from NISL Lab,
	  Tsinghua University.
	- Add harden-unknown-additional option. It removes
	  unknown records from the authority section and additional section.
	  Thanks to Xiang Li, from NISL Lab, Tsinghua University.
	- Set default for harden-unknown-additional to no. So that it does
	  not hamper future protocol developments.
	- Fix test for new default.

18 January 2023: Wouter
	- Fix not following cleared RD flags potentially enables amplification
	  DDoS attacks, reported by Xiang Li and Wei Xu from NISL Lab,
	  Tsinghua University. The fix stops query loops, by refusing to send
	  RD=0 queries to a forwarder, they still get answered from cache.

13 January 2023: Wouter
	- Merge #826: Аdd a metric about the maximum number of collisions in
	  lrushah.
	- Improve documentation for #826, describe the large collisions amount.

9 January 2023: Wouter
	- Fix python module install path detection.
	- Fix python version detection in configure.

6 January 2023: Wouter
	- Fix #823: Response change to NODATA for some ANY queries since
	  1.12, tested on 1.16.1.
	- Fix wildcard in hyperlocal zone service degradation, reported
	  by Sergey Kacheev. This fix is included in 1.17.1rc2.
	  That became 1.17.1 on 12 Jan 2023, the code repo continues
	  with 1.17.2. 1.17.1 excludes fix #823, it is included forwards.

5 January 2023: Wouter